<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value" translatable="false">2</string>
    <string name="order">Order</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Greg">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">\nAdd whipped cream: <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">\nAdd chocolate:  <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">\nQuantity: <xliff:g id="quantity" example="true">%d</xliff:g></string>
    <string name="order_summary_price">\nTotal: $<xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="thank_you">\nThank you!</string>
    <string name="toast_msg_greater">Number of coffees cannot be greater than 100</string>
    <string name="Toast_msg_less">Number of coffees cannot be less than 1</string>
    <string name="order_summary_email_subjec">"JustJava order for "</string>
    <string name="descrement">-</string>
    <string name="increment">+</string>
</resources>
